--- a/app/scss/about_us/_visimisi.scss
+++ b/app/scss/about_us/_visimisi.scss
@@ -2,24 +2,43 @@
 
 .visi-misi {
   margin-bottom: 30px;
+
   &__wrapper {
     display: flex;
+    align-items: stretch; // Ensures both image and content match height
     justify-content: space-between;
     gap: u.rem(30);
     margin-bottom: u.rem(40);
+  }
+
+  &__flex-image {
+    border-radius: u.rem(10);
+    box-shadow: 0 u.rem(6) u.rem(12) rgba(0, 0, 0, 0.1);
+    object-fit: cover;
+    margin-bottom: u.rem(32); // Space below the image if necessary
+    max-width: 50%; // Ensure it doesn't overflow the container
+    margin: 0 auto; // Center the image horizontally
+  
+    @include u.breakpoint(large) {
+      // Adjustments for larger screens if necessary
+      width: 165%;
+    }
   }
 
   &__image {
     width: 40%;
     border-radius: 10px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    object-fit: cover; // Ensures image fills the available space without distortion
+    height: auto; // Default height
 
     @include u.breakpoint(large) {
-      height: 600px;
+      height: 100%; // Makes image take the full height of the container
     }
   }
 
   &__theme {
+    flex: 1; // Ensures text section takes remaining space
     text-align: justify;
   }
 
@@ -38,10 +57,11 @@
   }
 
   &__statement {
+    text-align: justify;
   } 
 }
 
-@media (max-width: 768px) {
+@media (max-width: 900px) {
     .visi-misi__wrapper {
       flex-direction: column;
       text-align: center;
