--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -26,7 +26,7 @@ main {
 }
 
 footer{
-    background-image: url(/images/homepage/SOIL.jpg);
+    background-image: url(/images/soil.jpg);
     background-size: cover;
     padding: 20px;
     border-top: 4px solid black;
@@ -76,4 +76,14 @@ footer ul {
     &:hover {
         opacity: 0.8; // Slightly reduces opacity for a hover effect
     }
+
+.typewriter {
+    font-size: 20px;
+    font-family: monospace;
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 3px solid black; /* Simulating a cursor */
+    width: 0;
+    animation: typing 3s steps(30, end) forwards, blink 0.8s infinite;
+}
 }
