--- a/app/scss/news&events/_news.scss
+++ b/app/scss/news&events/_news.scss
@@ -6,7 +6,6 @@
         gap: 1.5rem;
     
     &__title{
-        color: var(--sub-font);
     }
 
     &__item {
@@ -53,10 +52,18 @@
     flex-wrap: wrap;
     gap: 12px;
     align-items: flex-start;
+    flex-direction: row;
+    text-align: justify;
 
     @include u.breakpoint(large){
         flex-wrap: nowrap;
     }
+}
+
+&__images{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 /* Image styling for the detailed news */
@@ -68,9 +75,13 @@
     margin-bottom: 10px;
 
     @include u.breakpoint(large){
-        width: 499px;
-        height: 455px;
+        width: 400px;
+        height: 224px;
     }
+}
+
+&__text-container {
+    flex: 2;
 }
 
 /* Adjust text alignment and spacing */
