--- a/app/scss/our-work/_crt.scss
+++ b/app/scss/our-work/_crt.scss
@@ -14,6 +14,8 @@
     display: flex;
     margin-bottom: 20px;
     flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
 
     @include u.breakpoint(large) {
       flex-wrap: nowrap;
@@ -184,8 +186,8 @@
       object-fit: cover;
           
       @include u.breakpoint(large) {
-        height: 351px;
-        width: 356px;
+        height: 386px;
+        width: 381px;
       }
   }
 
