--- a/app/scss/our-work/_trials.scss
+++ b/app/scss/our-work/_trials.scss
@@ -36,8 +36,8 @@
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
 
     @include u.breakpoint(large) {
-      height: 600px;
-      width: 100%;
+      height: 613px;
+      width: 692px;
     }
   }
 
@@ -75,8 +75,8 @@
     top: 65%;
 
     @include u.breakpoint(large) {
-    left: 10%;
-    top: 72%;
+    left: 3%;
+    top: 105%;
     }
   }
 
@@ -86,8 +86,8 @@
     top: 160%;
 
     @include u.breakpoint(large) {
-      left: 72%;
-      top: 72%;
+      left: 77%;
+      top: 101%;
     }
   }
 
@@ -148,8 +148,8 @@
   }
 
   &__picture{
-    width: 380px;
-    height: 400px;
+    width: 250px;
+    height: 250px;
     border-radius: 159px;
   }
 
@@ -245,7 +245,7 @@
 
     @include u.breakpoint(large) {
       left: 2%;
-      width: 45%;
+      max-width: 45%;
       top: 28%;
     }
 
@@ -265,7 +265,7 @@
 
     @include u.breakpoint(large) {
       right: 2%;
-      width: 45%;
+      max-width: 45%;
       top: 28%;
     }
   }
@@ -278,7 +278,7 @@
     border-radius: 20px;
 
     @include u.breakpoint(large) {
-      width: 720px;
+    width: 604px;
     height: 500px;
     }
   }
