--- a/app/scss/support/_intern.scss
+++ b/app/scss/support/_intern.scss
@@ -40,6 +40,24 @@
         background: var(--flex-bg);
         padding: 20px;
         border-radius: 20px;
+
+        li{
+            margin-top: 0; // Remove top margin for consistency
+    font-size: u.rem(22); // Base font size of 18px converted to rem
+    line-height: u.rem(28); // Set line-height to 1.3 for readability
+    font-family: "Nunito Sans", serif;
+
+    &.medium { // Medium-sized paragraph variation
+        font-size: u.rem(20); // Base font size of 20px
+        font-size: clamp(u.rem(18), 1.136rem + 0.48vw, u.rem(20)); // Responsive font size using clamp()
+    }
+
+    &.large { // Large-sized paragraph variation
+        font-size: clamp(u.rem(20), 1.39rem + 0.48vw, u.rem(22)); // Responsive font size using clamp()
+        margin-block-end: u.rem(40); // Bottom margin of 40px converted to rem
+        line-height: u.rem(32);
+    }
+        }
     }
 
     &__cta{
