--- a/app/scss/main/_publication.scss
+++ b/app/scss/main/_publication.scss
@@ -9,12 +9,16 @@
     flex-direction: column;
     gap: 30px;
 
+
     &__row{
         display: flex;
         align-items: center;
         gap: 20px;
+        flex-wrap: wrap;
+
         @include u.breakpoint(large) { 
-            }
+            flex-wrap: nowrap;
+        }
     }
 
     &__header-bar{
@@ -46,14 +50,13 @@
         background-color: hsl(60, 29%, 64%);
         border-radius: 20px;
         flex: 1;
-        max-width: 71%;
         display: flex;
         flex-direction: column;
         justify-content: center;
 
 
         @include u.breakpoint(large) { 
-
+        max-width: 71%;
         }
     }
 
