--- a/app/scss/our-work/_crt.scss
+++ b/app/scss/our-work/_crt.scss
@@ -24,8 +24,14 @@
 
   &__image{
     margin: 0 auto;
+    height: 332px;
+    width: 332px;
+
+    @include u.breakpoint(large) {
+    margin: 0 auto;
     height: 380px;
     width: 460px;
+    }
   }
 
   &__description{
@@ -179,7 +185,7 @@
   &__image-wrapper{}
 
   &__image{
-    width: 300px;
+    width: 332px;
       height: 300px;
       border-radius: 10px;
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
@@ -229,13 +235,14 @@
 
   &__grid-item {
     position: relative;
-    width: 92%; // Ensures 3 images per row
-    height: 200px;
+    width: 100%;
+    height: 317px;
     overflow: hidden;
     border-radius: 10px;
 
     @include u.breakpoint(large) {
       height: 420px;
+      width: 92%;
     }
   }
 
@@ -244,8 +251,6 @@
   }
 
   &__image {
-    width: 100%;
-    height: 100%;
     object-fit: cover; // Ensures the image fills the box
     transition: transform 0.3s ease-in-out;
     border-radius: 20px;
