--- a/app/scss/visit_us/_visit.scss
+++ b/app/scss/visit_us/_visit.scss
@@ -12,14 +12,15 @@
 .contact-info{
 
   &__icon-box{
-    position: absolute;
-    top: 134%;
-    right: 20%;
+    text-align: center;
+  //   position: absolute;
+  //   top: 134%;
+  //   right: 20%;
 
-    @include u.breakpoint(large) {
-    top: 103%;
-    right: 13%;
-  }
+  //   @include u.breakpoint(large) {
+  //   top: 103%;
+  //   right: 13%;
+  // }
 }
 
   &__icon{
@@ -40,6 +41,6 @@
 
   &__button{
     font-size: u.rem(50);
-    margin:30px 0;
+    margin-bottom:30px;
   }
 }
